--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 </head>
 <body>
-<div >
+<div class="HCM">
+    <button class="head">
         <div class="header">
             <div class="number" style="font-size: 30px">11</div>
             <div class="clear-sky">
@@ -16,7 +17,29 @@
             <div class="degrees">30&#176;</div>
             <div class="city">Hồ Chí Minh</div>
             <div class="water"><img class="drop" src="drop.png">0% </div>
+            <div class="next">&#187;</div>
         </div>
+    </button>
+    <div class="select">
+        <p>Nhiều nắng</p>
+        <div class="extra">
+            <div>chỉ số UV</div>
+            <div>10 Rất cao</div>
+        </div>
+        <div class="extra">
+            <div>Gió</div>
+            <div>TTN 7km/h</div>
+        </div>
+        <div class="extra">
+            <div>Gió giật</div>
+            <div>19km/h</div>
+        </div>
+        <div class="extra">
+            <div>Chất lượng không khí</div>
+            <div style="color: coral">Vừa phải</div>
+        </div>
+    </div>
+
 
 </div>
 </body>
