--- a/index.html
+++ b/index.html
@@ -23,24 +23,30 @@
     <div class="select">
         <p>Nhiều nắng</p>
         <div class="extra">
-            <div>chỉ số UV</div>
+            <div>Chỉ số UV</div>
             <div>10 Rất cao</div>
         </div>
+        <hr>
         <div class="extra">
             <div>Gió</div>
             <div>TTN 7km/h</div>
         </div>
+        <hr>
         <div class="extra">
             <div>Gió giật</div>
             <div>19km/h</div>
         </div>
+        <hr>
         <div class="extra">
             <div>Chất lượng không khí</div>
             <div style="color: coral">Vừa phải</div>
         </div>
+        <hr>
+        <div class="extra">
+            <div>Điểm sương</div>
+            <div>18&#176;C</div>
+        </div>
     </div>
-
-
 </div>
 </body>
 </html>
